infrastructure/waddle.cloud/gitops/livekit/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: livekit-redis
  namespace: livekit
spec:
  ports:
    - name: redis
      port: 6379
      targetPort: redis
      protocol: TCP
  selector:
    app.kubernetes.io/name: livekit-redis
