infrastructure/waddle.cloud/gitops/livekit/httproute-http-redirect.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: livekit-http-redirect
  namespace: livekit
spec:
  parentRefs:
    - name: waddle-gateway
      namespace: default
      sectionName: http
  hostnames:
    - livekit.apps.waddle.chat
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
