infrastructure/waddle.cloud/gitops/livekit/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: livekit
  namespace: livekit
spec:
  parentRefs:
    - name: waddle-gateway
      namespace: default
      sectionName: https
  hostnames:
    - livekit.apps.waddle.chat
  rules:
    - backendRefs:
        - name: livekit-server
          port: 80
